...
                        android:layout_height="match_parent"></LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small">

                <EditText
...
                    android:singleLine="true"
                    android:imeOptions="actionNext"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small">
                <AutoCompleteTextView
                    android:id="@+id/register_name"
                    android:layout_width="match_parent"
...
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:imeOptions="actionNext" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small">
                <com.tokopedia.core.session.PasswordView
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:imeActionId="@+id/register_button"
                    android:imeActionLabel="Lanjut"
                    android:imeOptions="actionUnspecified"
                    android:typeface="sans"/>
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
...
